// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletListItemSkeleton should render wallet list skeleton when isCompact = false 1`] = `
<div>
  <table>
    <tbody
      data-testid="WalletListSkeleton"
    >
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 beVmY space-x-4"
          >
            <div
              class="flex justify-center divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 h-11 gap-4"
            >
              <div
                class="flex items-center justify-center "
                data-testid="WalletIcon__Starred"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 20px; height: 20px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
              <div />
            </div>
            <div
              class="flex items-center -space-x-1"
            >
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 egSsGQ border-transparent ring-theme-background"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 20px; height: 20px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </div>
            <span>
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 200px; height: 20px;"
              >
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq justify-center text-sm font-bold text-center align-middle"
          >
            <span>
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 100px; height: 20px;"
              >
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iWCFjq font-semibold justify-end"
          >
            <span>
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 150px; height: 20px;"
              >
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-400"
          >
            <span>
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 100px; height: 20px;"
              >
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 jEaNbo justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe ml-3 my-auto "
              data-testid="WalletHeader__send-button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Send
              </div>
            </button>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 kkDhXe w-11 flex-1 text-white bg-theme-primary-600 hover:bg-theme-primary-700"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ellipsis-vertical.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItemSkeleton should render wallet list skeleton when isCompact = true 1`] = `
<div>
  <table>
    <tbody
      data-testid="WalletListSkeleton"
    >
      <tr
        class="TableRow__TableRowStyled-sc-y9j4av-0 jRikRC"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 UdZIx space-x-3"
          >
            <div
              class="flex justify-center divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 h-5 gap-3"
            >
              <div
                class="flex items-center justify-center "
                data-testid="WalletIcon__Starred"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 20px; height: 20px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
              <div />
            </div>
            <div
              class="flex items-center space-x-4"
            >
              <div
                class="Circle__CircleWrapper-sc-d5u41q-0 csrTuU border-transparent ring-theme-background"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 20px; height: 20px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </div>
            <span>
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 200px; height: 20px;"
              >
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD justify-center text-sm font-bold text-center align-middle"
          >
            <span>
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 100px; height: 20px;"
              >
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 iTMWpD font-semibold justify-end"
          >
            <span>
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 150px; height: 20px;"
              >
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-400"
          >
            <span>
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 100px; height: 20px;"
              >
                ‌
              </span>
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-v39gua-0 dMbCwx justify-end text-theme-secondary-text"
          >
            <button
              class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT ml-3 text-theme-primary-600 hover:text-theme-primary-700 -mr-3"
              data-testid="WalletHeader__send-button"
              disabled=""
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                Send
              </div>
            </button>
            <div
              class="ml-3"
              data-testid="WalletHeader__more-button"
            >
              <button
                class="OriginalButton__StyledButton-sc-o0fs2j-0 lcpndT w-11 -mr-3 text-theme-primary-300 hover:text-theme-primary-600"
                disabled=""
                type="button"
              >
                <div
                  class="flex items-center space-x-2"
                >
                  <div
                    class="sc-bdvvtL qGXhc"
                    height="20"
                    width="20"
                  >
                    <svg>
                      ellipsis-vertical.svg
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
